--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -22,14 +22,14 @@ gradle_build/use_gradle_build=true
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
-architectures/armeabi-v7a=false
+architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
-architectures/x86=false
-architectures/x86_64=false
+architectures/x86=true
+architectures/x86_64=true
 version/code=1
-version/name=""
+version/name="Cotil's Adventure"
 package/unique_name="com.example.$genname"
-package/name=""
+package/name="Cotil's Adventure"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
@@ -125,7 +125,7 @@ permissions/location_hardware=false
 permissions/manage_accounts=false
 permissions/manage_app_tokens=false
 permissions/manage_documents=false
-permissions/manage_external_storage=false
+permissions/manage_external_storage=true
 permissions/master_clear=false
 permissions/media_content_control=false
 permissions/modify_audio_settings=false
@@ -139,7 +139,7 @@ permissions/process_outgoing_calls=false
 permissions/read_calendar=false
 permissions/read_call_log=false
 permissions/read_contacts=false
-permissions/read_external_storage=false
+permissions/read_external_storage=true
 permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
@@ -190,7 +190,7 @@ permissions/write_apn_settings=false
 permissions/write_calendar=false
 permissions/write_call_log=false
 permissions/write_contacts=false
-permissions/write_external_storage=false
+permissions/write_external_storage=true
 permissions/write_gservices=false
 permissions/write_history_bookmarks=false
 permissions/write_profile=false
